[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/commanderBot.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="CylinderMesh" id=2]

[node name="commandBot" type="Spatial"]
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody/CollisionShape"]
mesh = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.380392 )
margin_left = 617.0
margin_top = 91.0
margin_right = 1006.0
margin_bottom = 339.0

[node name="BotLabel" type="RichTextLabel" parent="Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 101.0
margin_bottom = 21.0
text = "Command Bot"

[node name="ActiveLabel" type="RichTextLabel" parent="Panel"]
margin_left = 7.0
margin_top = 31.0
margin_right = 63.0
margin_bottom = 47.0
text = "Active"

[node name="ActiveButton" type="Button" parent="Panel"]
margin_left = 329.0
margin_top = 6.0
margin_right = 381.0
margin_bottom = 26.0
text = "Active"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 5.0
margin_top = 54.0
margin_right = 316.0
margin_bottom = 159.0
text = "Bots Commanding: "

[connection signal="input_event" from="KinematicBody" to="." method="_on_KinematicBody_input_event"]
